@@ -1217,7 +1217,7 @@ $2 Показване на пренасочвания &nbsp; Търсене на
 'newtitle'    => 'Към ново заглавие',
 'movepagebtn'  => 'Преместване',
 'pagemovedsub'  => 'Преместването беше успешно',
-'pagemovedtext' => 'Страницата „[[$1]]“ беше преместена под името „[[$2]]“.',
+'pagemovedtext' => 'Страницата „$1“ беше преместена под името „$2“.',
 'articleexists' => 'Вече съществува страница с това име или името, което сте избрали, е невалидно. Моля, изберете друго име.',
 'talkexists'  => "'''Страницата беше успешно преместена, но без съответната дискусионна страница, защото под новото име има една съществуваща. Моля, обединете ги ръчно.'''",
 'movedto'    => 'преместена като',
