@@ -226,7 +226,7 @@ $wgNamespaceNamesCsb = array(
 'orphans' => 'Niechóné starnë',
 'othercontribs' => 'Òpiarté na prôcë $1.',
 'pagemovedsub' => 'Przeniesenié darzëło sã',
-'pagemovedtext' => 'Starna "[[$1]]" òsta przeniesłô do "[[$2]]".',
+'pagemovedtext' => 'Starna "$1" òsta przeniesłô do "$2".',
 'pagetitle' => '$1 - {{SITENAME}}',
 'passwordremindertext' => 'Chtos (prôwdëjuwerno Të, z adresë $1) pòprosëł ò wësłanié nowi parolë dopùscënkù do {{SITENAME}}. Aktualnô parola dlô brëkòwnika "$2" je "$3". Nôlepi mdze czej wlogùjesz sã terô ë zarô zmienisz parolã.',
 'personaltools' => 'Priwatné przërëchtënczi',
